--- a/page/style.css
+++ b/page/style.css
@@ -12,11 +12,13 @@ input[type="text"] {
     border-bottom: 1px solid #000;
     box-sizing: border-box;
 }
-textarea {
+
+#content  {
     width: 100%;
     height: 700px;
     padding: 10px;
     box-sizing: border-box;
+    position: relative;
 }
 #keywords, #tags{
     width: 20%;
